src/command_syntax/syntaxes/snapshots/lammps_analyser__command_syntax__syntaxes__boundary__test__lmp_example_2.snap
---
source: src/command_syntax/syntaxes/boundary.rs
expression: "super::syntax().parse(&x).expect(\"Should parse\")"
---
ParseResult {
    command_name: "boundary",
    positionals: [
        Argument {
            kind: Word(
                "p",
            ),
            span: Span {
                start: Point {
                    row: 0,
                    column: 9,
                },
                end: Point {
                    row: 0,
                    column: 10,
                },
            },
        },
        Argument {
            kind: Word(
                "fs",
            ),
            span: Span {
                start: Point {
                    row: 0,
                    column: 11,
                },
                end: Point {
                    row: 0,
                    column: 13,
                },
            },
        },
        Argument {
            kind: Word(
                "p",
            ),
            span: Span {
                start: Point {
                    row: 0,
                    column: 14,
                },
                end: Point {
                    row: 0,
                    column: 15,
                },
            },
        },
    ],
    style: None,
    style_args: [],
    kwargs: [],
}
