src/command_syntax/syntaxes/snapshots/lammps_analyser__command_syntax__syntaxes__boundary__test__lmp_examples-2.snap
---
source: src/command_syntax/syntaxes/boundary.rs
expression: "super::syntax().parse(x)"
---
ParseResult {
    command_name: "boundary",
    positional: [
        "p",
        "fs",
        "p",
    ],
    style: None,
    style_args: [],
    kwargs: [],
}
