src/command_syntax/syntaxes/snapshots/lammps_analyser__command_syntax__syntaxes__boundary__test__lmp_examples-3.snap
---
source: src/command_syntax/syntaxes/boundary.rs
expression: "super::syntax().parse(x)"
---
ParseResult {
    command_name: "boundary",
    positional: [
        "s",
        "f",
        "fm",
    ],
    style: None,
    style_args: [],
    kwargs: [],
}
