src/command_syntax/syntaxes/snapshots/lammps_analyser__command_syntax__syntaxes__boundary__test__lmp_examples.snap
---
source: src/command_syntax/syntaxes/boundary.rs
expression: "super::syntax().parse(x)"
---
ParseResult {
    command_name: "boundary",
    positional: [
        "p",
        "p",
        "f",
    ],
    style: None,
    style_args: [],
    kwargs: [],
}
